make sure the default display is none on mobile

--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,7 @@ header :nth-child(3){
 @media only screen and (max-width: 600px){
     header > :nth-child(2){
         flex-direction: column;
+        display: none;
 
     }
     #reorder-nav{
